# go-analyzers

./: .gitignore  BUILD.bazel  LICENSE  README.md  WORKSPACE  go.mod  go.sum  repositories.bzl
src/onlyany/: BUILD.bazel  onlyany.go
src/visibilityorder/: BUILD.bazel  visibilityorder.go
