load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "onlyany",
    srcs = ["onlyany.go"],
    importpath = "github.com/dorfire/go-analyzers/onlyany",
    visibility = ["//visibility:public"],
    deps = [
        "@org_golang_x_tools//go/analysis",
        "@org_golang_x_tools//go/analysis/passes/inspect",
        "@org_golang_x_tools//go/ast/inspector",
    ],
)
