load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "visibilityorder",
    srcs = ["visibilityorder.go"],
    importpath = "github.com/dorfire/go-analyzers/src/visibilityorder",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_samber_lo//:lo",
        "@org_golang_x_tools//go/analysis",
    ],
)
